# Isopod

./: .coverage  .readthedocs.yaml  .readthedocs.yml  Isopod.py  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: workflow_1.yml
Example/: Example_application.ipynb
Isopod/: Isopod.py  Untitled.ipynb
Isopod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: requirements.txt
docs/source/: Isopod.rst  conf.py  index.rst
test/: test_keypoints.py  test_matching.py  test_output.py  test_resize_rotation.py
