[build-system]
requires = ["setuptools>=68.0"]
build_backend = "setuptools.build_meta"


[project]
name = "Isopod"
dynamic = ["version"]
authors = [
    {name = "Tano Kender"}
]
description = "A small package for image stitching."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.23.5",
    "opencv-python-headless >= 4.8.1.78",
    "matplotlib >= 3.7.2",
    "imutils >=0.5.4"]

[project.urls]
Homepage = "https://github.com/InkAtom/Isopod/"

[tool.setuptools.dynamic]
version = {attr = "Isopod.__version__"}